--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,14 @@
     height:100vh;
 }
 
+.footer{
+    color: thistle;
+    background-color: #343a40;
+}
+
+.footer .col{
+    padding:1.5em;
+}
 
 .quote-text-highlight{
     font-size: 2.5rem;
@@ -78,6 +86,16 @@
 
 .align-text-right{
     text-align: right;
+}
+
+.align-text-center{
+    text-align: center;
+}
+
+.footer-heading{
+    color: tomato;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 1.5em;
 }
 
 .scroll-down{
@@ -147,7 +165,7 @@
         width:1.6em;
     }
     .quote{
-        font-size: 1em;
+        font-size: 2em;
     }
     .quote-text-highlight{
         font-size: 1.25em;
