--- a/css/styles.css
+++ b/css/styles.css
@@ -142,6 +142,10 @@
     height: 10vh;
 }
 
+.icdse-sponsors{
+    width:12em;
+}
+
 @media (max-width:425px){
     .iitp-name{
         font-size:0.9em;
